# FidelityFX-FSR-Unity

./: CMakeLists.txt
src/: CMakeLists.txt  device.cpp  device.h  device_dx11.cpp  device_dx11.h  device_dx12.cpp  device_dx12.h  device_vk.cpp  device_vk.h  dllloader.cpp  dllloader.h  fsr2.cpp  fsr2.h  fsr3.cpp  fsr3.h  fsrapi.cpp  fsrapi.h  fsrapi_util.hpp  fsrunityplugin.cpp  fsrunityplugin.h
