cmake_minimum_required(VERSION 3.10)

project("FidelityFX-FSR-Unity" VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")

# set output directory
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin)

# set output postfix for debug
set(CMAKE_DEBUG_POSTFIX d)

set(UNITY_PLUGINAPI_INCLUDE_DIR "Set the include dir for Unity plugin API" CACHE PATH "")
set(FSR_VERSION fsr2 CACHE STRING "Choose FSR version, must be one of: [fsr2, fsr3, fsrapi]")
set(FFX_FSR_API_INCLUDE_DIR "Set the include dir for FidelityFX FSR2/3 API" CACHE PATH "")
set(FFX_FSR_API_LIB_DIR "Set the FSR2/3 library dir for linking the FidelityFX FSR2/3 API" CACHE PATH "")
set(FSR_UNITY_PLUGIN_DST_DIR "" CACHE PATH "")
set(FSR_BACKEND dx11 CACHE STRING "Choose FSR backend, must be one of: [dx11,dx12]")

add_subdirectory(src)
